# adaptive-ai

./: .gitignore  README.md  pyproject.toml
adaptive_ai/: __init__.py  api.py  dataset.py  math.py  storage.py
docs/superpowers/plans/: 2026-05-02-streaming-dataset-training.md
docs/superpowers/specs/: 2026-05-02-streaming-dataset-training-design.md
tests/: test_adaptive_ai.py  test_streaming_dataset.py  test_streaming_math.py
