[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptive-ai"
version = "0.1.0"
description = "Local-first adaptive neural matrix MVP"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["adaptive_ai*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
